dataset1235/2025-2/610742602/users/1276526791/executions/677928262_1078076002.log
== SUBMISSION (2025-08-28 00:57:35)
-- CODE: 
 x1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = 1.23
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = 1.23
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:28:04)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(input(x2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
01.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
01.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:57:23)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x1 = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:22:15)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:13:31)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada
# h) Correção:
x1 = input("Ufam")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:10:56)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada
# h) Correção:
x1 = ("Ufam")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:23:23)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:27:06)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(input(x1,x2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(input(x1,x2))
          ^^^^^^^^^^^^
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(input(x1,x2))
          ^^^^^^^^^^^^
TypeError: input expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:57:52)
-- CODE: 
 x1 = (1.23)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:23:27)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:07:02)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:25:00)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x1,x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23 0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:56:54)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:31:23)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:

# s) NameError. Porque a escrita está incorreta, o certo é print.
# u) Correção:
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:57:14)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x1 = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:18:54)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1
# l) Correção
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:19:06)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1
# l) Correção
x1 = input("Ufam")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:22:07)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção
x1 = input("Ufam")
print(x1)

# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:41:10)
-- CODE: 
# Código solicitado: x 1 = 1.23
# Erro: SyntaxError
# Motivo: não deve ter espaço no nome da variável (x 1)

# Código corrigido:
x1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:21:55)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção
x1 = input("Ufam")
print(x1)

# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:31:09)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:

# s) NameError. Porque a escrita está incorreta, o certo é print.
# u) Correção:
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:12:14)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada
# h) Correção:
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:58:13)
-- CODE: 
 x1 = (1.23)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:55:12)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:10:10)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada
# h) Correção:
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:12:02)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada
# h) Correção:
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:57:12)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:24:51)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
x1 = 1.23
x2 = 0
print(x1, x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23 0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:26:23)
-- CODE: 
# c) SyntaxError. Porque o nome da variável não pode conter espaço
# d) Correção:

# g) SyntaxError. Porque a string foi iniciada mas nunca fechada. Também não deveria ser uma string escrita direto.
# h) Correção:

# k) SyntaxError. Parêntese não fechado em print(x1. Ademais, Não deve ser string escrita direto
# l) Correção


# o) NameError. A variável deve ser x2, não X2
# P) Correção:
input(x1 = 1.23)
input(x2 = 0)
print(x1,x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    input(x1 = 1.23)
TypeError: input() takes no keyword arguments
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    input(x1 = 1.23)
TypeError: input() takes no keyword arguments
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:55:14)
-- CODE: 
# b) Syntax Error. Não pode ter espaço no nome da variável (x 1)
# d) 
x1 = 1.23
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:58:11)
-- CODE: 
 x1 = (1.23)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = (1.23)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
